confik-macros/tests/trybuild/fail-default-parse.rs
#[derive(confik::Configuration)]
struct Config {
    #[confik(default = 1 + 2)]
    _param: usize,
}

fn main() {}
